--- a/app/blog/posts/beginning-a-journey.mdx.mdx
+++ b/app/blog/posts/beginning-a-journey.mdx.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Beginning a Journey'
-publishedAt: '2025-01-04'
+publishedAt: "2025-04-01"
 summary: 'About me and what inspired me to start.'
 ---
 
